# ros2_robotics_course

./: .gitignore  main.py  pyproject.toml  settings.ini
nbs/: 00_introduction.ipynb  01_installation.ipynb  02_ros2_architecture.ipynb  03_workspace_setup.ipynb  04_first_node.ipynb  05_topics_pubsub.ipynb  06_camera_setup.ipynb  07_opencv_processing.ipynb  08_deep_learning.ipynb  index.ipynb
